kubernetes/deploy/proxies/internal/ambilight/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ambilight
spec:
  ports:
  - protocol: TCP
    port: 8090
    name: http
    targetPort: 8090
