kubernetes/deploy/proxies/internal/ambilight/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: ambilight
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ambilight.vandeneede.org`)
    services:
    - name: backupvault
      port: 8090
